@@ -1,19 +1,7 @@
 plugins {
-    `java-library`
-    id("net.fabricmc.fabric-loom-remap") version("1.17.+")
-    id("ploceus") version("1.17.+")
+    id("mc")
 }
 
-@Suppress("MayBeConstant")
-object Versions {
-    val minecraft = "1.8.9"
-    val feather = "1"
-    val osl = "0.20.3"
-    val fabric = "0.19.3"
-    val legacy_lwjgl3 = "1.4.1"
-}
-
-group = "dev.rdh"
 version = "2.4.0-dev.5"
 
 java.toolchain {
@@ -24,81 +12,25 @@ val testmod = sourceSets.create("testmod")
 testmod.compileClasspath += sourceSets.main.get().output + sourceSets.main.get().compileClasspath
 testmod.runtimeClasspath += sourceSets.main.get().output + sourceSets.main.get().runtimeClasspath
 
-allprojects {
-    apply(plugin = "java")
-
-    repositories {
-        exclusiveContent {
-            forRepository { mavenCentral() }
-            filter {
-                includeGroup("org.lwjgl")
-            }
-        }
-        maven("https://maven.taumc.org/releases")
-        maven("https://maven.axolotlclient.com/releases")
-        exclusiveContent {
-            forRepository { maven("https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1") }
-            filter {
-                includeGroup("me.djtheredstoner")
-            }
-        }
-    }
-
-    configurations.all {
-        resolutionStrategy {
-            exclude(group = "org.lwjgl.lwjgl")
-        }
-    }
-
-    gradle.taskGraph.whenReady {
-        allTasks.filter { it.name == "net.fabricmc.devlaunchinjector.Main.main()" }.forEach {
-            it.notCompatibleWithConfigurationCache("loom weird?")
-        }
-    }
-
-    tasks.assemble {
-        dependsOn("remapJar")
-    }
-}
-
 loom {
-    uncompressNestedJars = true
-
     mods {
-        create("argentum") {
-            sourceSet(sourceSets.main.get())
-        }
         create("argentum-font-test") {
             sourceSet(testmod)
         }
     }
     runs {
-        named("client") {
-            jvmArguments.add("-XstartOnFirstThread")
-
-            jvmArguments.add("-XX:+UseZGC")
-            jvmArguments.add("-XX:MaxGCPauseMillis=50")
-            jvmArguments.add("-XX:+UseCompactObjectHeaders")
-            jvmArguments.add("--enable-native-access=ALL-UNNAMED")
-            jvmArguments.add("--sun-misc-unsafe-memory-access=allow")
-
-            systemProperties.put("java.awt.headless", "true")
-            systemProperties.put("legacy_lwjgl3.use_sdl", "true")
-            systemProperties.put("devauth.enabled", "true")
-        }
-
         create("fontTestClient") {
             inherit(getByName("client"))
-            source(testmod)
-            configName = "Font Visual Test"
+            sourceSet = testmod.name
+            displayName = "Font Visual Test"
             jvmArguments.add("-XstartOnFirstThread")
             systemProperties.put("argentum.disableFontBatching", findProperty("disableFontBatching")?.toString() ?: "false")
             systemProperties.put("argentum.fontTestVariant", findProperty("fontTestVariant")?.toString() ?: "batched")
         }
         create("fontTestVanillaClient") {
             inherit(getByName("client"))
-            source(testmod)
-            configName = "Font Visual Test (Vanilla)"
+            sourceSet = testmod.name
+            displayName = "Font Visual Test (Vanilla)"
             jvmArguments.add("-XstartOnFirstThread")
             systemProperties.put("argentum.disableFontBatching", "true")
             systemProperties.put("argentum.fontTestVariant", "vanilla")
@@ -106,29 +38,11 @@ loom {
     }
 }
 
-ploceus {
-    setIntermediaryGeneration(2)
-}
-
 dependencies {
-    minecraft("com.mojang:minecraft:${Versions.minecraft}")
-    mappings(loom.layered {
-        mappings(ploceus.featherMappings(Versions.feather))
-        mappings(file("mappings/feather-overrides.tiny"))
-    })
-
-    modImplementation("net.fabricmc:fabric-loader:${Versions.fabric}")
-    ploceus.dependOsl(Versions.osl)
-
     include(implementation("org.joml:joml:1.10.5")!!)
     implementation("it.unimi.dsi:fastutil:8.5.15")
-
-    include(api("org.embeddedt.celeritas:celeritas-common:${version}")!!)
-
     implementation("org.apache.logging.log4j:log4j-api:2.0-beta9")
-    modImplementation("io.github.moehreag:legacy-lwjgl3:${Versions.legacy_lwjgl3}")
-
-    modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.2")
+    include(api("org.embeddedt.celeritas:celeritas-common:${version}")!!)
 }
 
 tasks.named("runFontTestClient") {
@@ -165,15 +79,3 @@ tasks.check {
     dependsOn("compileTestmodJava")
 }
 
-tasks.processResources {
-    val v = project.version
-    inputs.property("version", v)
-
-    filesMatching("fabric.mod.json") {
-        expand("version" to v)
-    }
-
-    from(rootProject.file("LICENSE")) {
-        into("META-INF")
-    }
-}
